test/library/standard/Communication/errors.putNegLoc.good
errors.chpl:20: error: halt reached - The destination locale ID (-1) for Communication.put is out of bounds.
